force-app/main/default/objects/Deal_Associates__c/Deal_Associates__c.object-meta.xml
<CustomObject>
    <label>Deal Associates</label>
    <nameField>
        <displayFormat>DAN-{000000}</displayFormat>
        <label>Deal Associates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>