force-app/main/default/objects/Deal_Associates__c/fields/Admin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Admin_Percentage__c</fullName>
    <label>Admin Percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>