force-app/main/default/objects/Deal_Associates__c/fields/Amount_for_Broker__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_Broker__c</fullName>
    <label>Amount for Broker</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>