force-app/main/default/objects/Deal_Associates__c/fields/Ampont__c.field-meta.xml
<CustomField>
    <fullName>Ampont__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Associates</relationshipLabel>
    <relationshipName>Deal_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>