force-app/main/default/objects/Deal_Associates__c/fields/ANF_Commisson_Amount__c.field-meta.xml
<CustomField>
    <fullName>ANF_Commisson_Amount__c</fullName>
    <label>ANF Commisson Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>