force-app/main/default/objects/Deal_Associates__c/fields/Apply_Admin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Apply_Admin_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Admin Percentage</label>
    <type>Checkbox</type>
</CustomField>