force-app/main/default/objects/Deal_Associates__c/fields/Assigned_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Party_Name__c</fullName>
    <label>Assigned Party Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>