force-app/main/default/objects/Deal_Associates__c/fields/Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission__c</fullName>
    <formula>Commission_Percentage__c *  Deal__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>