force-app/main/default/objects/Deal_Associates__c/fields/Broker_Split__c.field-meta.xml
<CustomField>
    <fullName>Broker_Split__c</fullName>
    <label>Broker Split</label>
    <length>32</length>
    <type>Text</type>
</CustomField>