force-app/main/default/objects/Deal_Associates__c/fields/Broker_Split_Notes__c.field-meta.xml
<CustomField>
    <fullName>Broker_Split_Notes__c</fullName>
    <label>Broker Split Notes</label>
    <type>TextArea</type>
</CustomField>