force-app/main/default/objects/Deal_Associates__c/fields/BrokerUpdateCheck__c.field-meta.xml
<CustomField>
    <fullName>BrokerUpdateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BrokerUpdateCheck</label>
    <type>Checkbox</type>
</CustomField>