force-app/main/default/objects/Deal_Associates__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Associates</relationshipLabel>
    <relationshipName>Deal_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>