force-app/main/default/objects/Deal_Associates__c/fields/Contact_Individual__c.field-meta.xml
<CustomField>
    <fullName>Contact_Individual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Associates (Contact)</relationshipLabel>
    <relationshipName>Deal_Associates1</relationshipName>
    <type>Lookup</type>
</CustomField>