force-app/main/default/objects/Deal_Associates__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Deal Associates</relationshipLabel>
    <relationshipName>Deal_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>