force-app/main/default/objects/Deal_Associates__c/fields/Deal_Associate__c.field-meta.xml
<CustomField>
    <fullName>Deal_Associate__c</fullName>
    <label>Deal Associate</label>
    <length>254</length>
    <type>Text</type>
</CustomField>