force-app/main/default/objects/Deal_Associates__c/fields/Department_Members__c.field-meta.xml
<CustomField>
    <fullName>Department_Members__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Members</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Associates1</relationshipName>
    <type>Lookup</type>
</CustomField>