force-app/main/default/objects/Deal_Associates__c/fields/Dept_Fund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Dept_Fund_Percentage__c</fullName>
    <label>Dept Fund(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>