force-app/main/default/objects/Deal_Associates__c/fields/Dept_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Dept_Head_Email__c</fullName>
    <label>Dept Head Email</label>
    <type>Email</type>
</CustomField>