force-app/main/default/objects/Deal_Associates__c/fields/Direct_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Direct_Commission_Percentage__c</fullName>
    <label>Direct Commission(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>