force-app/main/default/objects/Deal_Associates__c/fields/ExchangeDiffAmount__c.field-meta.xml
<CustomField>
    <fullName>ExchangeDiffAmount__c</fullName>
    <label>ExchangeDiffAmount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>