force-app/main/default/objects/Deal_Associates__c/fields/Fee_Type_or__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_or__c</fullName>
    <label>Fee Type(% or $)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage(%)</fullName>
            </value>
            <value>
                <fullName>Flat Fee($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>