force-app/main/default/objects/Deal_Associates__c/fields/Landlord_Name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Name__c</fullName>
    <label>Landlord Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>