force-app/main/default/objects/Deal_Associates__c/fields/Lease_Commencement__c.field-meta.xml
<CustomField>
    <fullName>Lease_Commencement__c</fullName>
    <label>Lease Commencement Date</label>
    <type>Date</type>
</CustomField>