force-app/main/default/objects/Deal_Associates__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listings__c</referenceTo>
    <relationshipLabel>Deal Associates</relationshipLabel>
    <relationshipName>Deal_Associates</relationshipName>
    <type>Lookup</type>
</CustomField>