force-app/main/default/objects/Deal_Associates__c/fields/Listing_agent_name2__c.field-meta.xml
<CustomField>
    <fullName>Listing_agent_name2__c</fullName>
    <label>Listing agent name2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>