force-app/main/default/objects/Deal_Associates__c/fields/Listing_Agent_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Name_2__c</fullName>
    <label>Listing Agent Name 2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>