force-app/main/default/objects/Deal_Associates__c/fields/Overriding_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Percentage__c</fullName>
    <label>Overriding(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>