force-app/main/default/objects/Deal_Associates__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage(%)</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>