force-app/main/default/objects/Deal_Associates__c/fields/Percentage_Of_Share__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Of_Share__c</fullName>
    <label>Percentage Of Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>