force-app/main/default/objects/Deal_Associates__c/fields/Pool_Commission__c.field-meta.xml
<CustomField>
    <fullName>Pool_Commission__c</fullName>
    <label>Pool Commission(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>