force-app/main/default/objects/Deal_Associates__c/fields/Project_Roles__c.field-meta.xml
<CustomField>
    <fullName>Project_Roles__c</fullName>
    <label>Project Roles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Lead</fullName>
            </value>
            <value>
                <fullName>Team member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>