force-app/main/default/objects/Deal_Associates__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Broker</fullName>
            </value>
            <value>
                <fullName>Co Broker</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Project Coordinator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>