force-app/main/default/objects/Deal_Associates__c/fields/Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Amount__c</fullName>
    <label>Split Amount</label>
    <length>254</length>
    <type>Text</type>
</CustomField>