force-app/main/default/objects/Deal_Associates__c/recordTypes/Buyer.recordType-meta.xml
<RecordType>
    <fullName>Buyer</fullName>
    <active>false</active>
    <label>Buyer</label>
</RecordType>