force-app/main/default/objects/Deal_Associates__c/recordTypes/Developer.recordType-meta.xml
<RecordType>
    <fullName>Developer</fullName>
    <active>false</active>
    <label>Developer</label>
</RecordType>