force-app/main/default/objects/Deal_Associates__c/recordTypes/External_Contact.recordType-meta.xml
<RecordType>
    <fullName>External_Contact</fullName>
    <active>true</active>
    <description>External Co-Broke</description>
    <label>External Contact</label>
</RecordType>