force-app/main/default/objects/Deal_Associates__c/recordTypes/Internal_Colleauge.recordType-meta.xml
<RecordType>
    <fullName>Internal_Colleauge</fullName>
    <active>false</active>
    <label>Internal Colleauge</label>
</RecordType>