force-app/main/default/objects/Deal_Associates__c/recordTypes/Landlord.recordType-meta.xml
<RecordType>
    <fullName>Landlord</fullName>
    <active>false</active>
    <label>Landlord</label>
</RecordType>