force-app/main/default/objects/Deal_Associates__c/recordTypes/Tenant.recordType-meta.xml
<RecordType>
    <fullName>Tenant</fullName>
    <active>false</active>
    <label>Tenant</label>
</RecordType>