force-app/main/default/objects/Deal_Associates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agent__c</columns>
    <columns>Broker__c</columns>
    <columns>Deal__c</columns>
    <columns>Commission_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>